[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "clirunner"
authors = [{ name = "Rhet Turnbull", email = "rturnbull+git@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Testing",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/RhetTbull/clirunner"
Issues = "https://github.com/RhetTbull/clirunner/issues"
Source = "https://github.com/RhetTbull/clirunner"

[project.optional-dependencies]
test = ["pytest>=7.4.2", "pytest-cov", "mypy>=1.6.1"]
dev = ["flit>=3.9.0", "cogapp>=3.3.0", "bump2version>=1.0.1", "doit>=0.36.0"]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.0.13",
    "mkdocstrings-python>=0.8.3",
]

[tool.mypy]
python_version = "3.9"
files = ["clirunner"]
show_error_codes = true
pretty = true
strict = true
local_partial_types = true
warn_unreachable = true
